# Requests

./: .gitignore  CMakeLists.txt  task_testing.cpp
gtest/: gtest_main.cc
inc/: ProjectPCH.h  Request.h  RequestManager.h  Stopper.h
src/: ProjectPCH.cpp  main.cpp
